# skill-tester

./: .coverage  .flake8  .gitattributes  .gitignore  README.md  README.zh-CN.md  SKILL.md  check_step_summary.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: default.yaml
references/: scoring_guide.md  trigger_keywords.md
scripts/: __init__.py  analyze.py  config.py  evaluate.py  execute.py  formatters.py  generate.py  run_tests.py  utils.py
tests/: conftest.py  test_analyze.py  test_config.py  test_evaluate.py  test_execute.py  test_formatters.py  test_generate.py  test_integration.py  test_run_tests.py
tests/fixtures/bad_skill/: SKILL.md
tests/fixtures/full_skill/: SKILL.md
tests/fixtures/full_skill/assets/: README.md
tests/fixtures/full_skill/references/: config_ref.md  schema.md
tests/fixtures/full_skill/scripts/: log_analyzer.sh  validator.py  yaml_helper.js
tests/fixtures/good_skill/: SKILL.md
